parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    EMPTY
    READLINE
    WHITE

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     expression -> MINUS expression
Rule 3     statement_list -> statement
Rule 4     statement_list -> statement_list statement
Rule 5     statement -> variable_declaration
Rule 6     statement -> function_declaration
Rule 7     statement -> if_statement
Rule 8     statement -> while_statement
Rule 9     statement -> output_statement
Rule 10    variable_declaration -> VAL ID COLONS type EQUAL expression
Rule 11    variable_declaration -> VAR ID COLONS type EQUAL expression
Rule 12    variable_declaration -> VAL ID EQUAL expression
Rule 13    variable_declaration -> VAR ID EQUAL expression
Rule 14    type -> INT
Rule 15    type -> STRING
Rule 16    type -> BOOLEAN
Rule 17    expression -> term
Rule 18    expression -> expression PLUS expression
Rule 19    expression -> expression MINUS expression
Rule 20    expression -> expression TIMES expression
Rule 21    expression -> expression DIVIDE expression
Rule 22    expression -> expression LOGICAL_AND expression
Rule 23    expression -> expression LOGICAL_OR expression
Rule 24    expression -> expression LOGICAL_EQUAL expression
Rule 25    expression -> LOGICAL_NOT expression
Rule 26    expression -> expression GREATER_THAN expression
Rule 27    expression -> expression LESS_THAN expression
Rule 28    expression -> expression NOT_EQUAL expression
Rule 29    expression -> expression GREATER_THAN_EQUAL expression
Rule 30    expression -> expression LESS_THAN_EQUAL expression
Rule 31    expression -> LPAREN expression RPAREN
Rule 32    term -> Literal
Rule 33    term -> ID
Rule 34    Literal -> INTEGER_LITERAL
Rule 35    Literal -> boolean
Rule 36    Literal -> STRING_LITERAL
Rule 37    boolean -> TRUE
Rule 38    boolean -> FALSE
Rule 39    sync -> NEWLINE
Rule 40    function_declaration -> FUN ID LPAREN parameter_list RPAREN LBRACE statement_list RBRACE
Rule 41    parameter_list -> parameter
Rule 42    parameter_list -> parameter_list COMMA parameter
Rule 43    parameter -> ID COLONS type
Rule 44    if_statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 45    if_statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
Rule 46    while_statement -> WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 47    output_statement -> PRINT LPAREN expression RPAREN

Terminals, with rules where they appear

BOOLEAN              : 16
COLONS               : 10 11 43
COMMA                : 42
DIVIDE               : 21
ELSE                 : 45
EMPTY                : 
EQUAL                : 10 11 12 13
FALSE                : 38
FUN                  : 40
GREATER_THAN         : 26
GREATER_THAN_EQUAL   : 29
ID                   : 10 11 12 13 33 40 43
IF                   : 44 45
INT                  : 14
INTEGER_LITERAL      : 34
LBRACE               : 40 44 45 45 46
LESS_THAN            : 27
LESS_THAN_EQUAL      : 30
LOGICAL_AND          : 22
LOGICAL_EQUAL        : 24
LOGICAL_NOT          : 25
LOGICAL_OR           : 23
LPAREN               : 31 40 44 45 46 47
MINUS                : 2 19
NEWLINE              : 39
NOT_EQUAL            : 28
PLUS                 : 18
PRINT                : 47
RBRACE               : 40 44 45 45 46
READLINE             : 
RPAREN               : 31 40 44 45 46 47
STRING               : 15
STRING_LITERAL       : 36
TIMES                : 20
TRUE                 : 37
VAL                  : 10 12
VAR                  : 11 13
WHILE                : 46
WHITE                : 
error                : 

Nonterminals, with rules where they appear

Literal              : 32
boolean              : 35
expression           : 2 10 11 12 13 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 26 26 27 27 28 28 29 29 30 30 31 44 45 46 47
function_declaration : 6
if_statement         : 7
output_statement     : 9
parameter            : 41 42
parameter_list       : 40 42
program              : 0
statement            : 3 4
statement_list       : 1 4 40 44 45 45 46
sync                 : 
term                 : 17
type                 : 10 11 43
variable_declaration : 5
while_statement      : 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (3) statement_list -> . statement
    (4) statement_list -> . statement_list statement
    (5) statement -> . variable_declaration
    (6) statement -> . function_declaration
    (7) statement -> . if_statement
    (8) statement -> . while_statement
    (9) statement -> . output_statement
    (10) variable_declaration -> . VAL ID COLONS type EQUAL expression
    (11) variable_declaration -> . VAR ID COLONS type EQUAL expression
    (12) variable_declaration -> . VAL ID EQUAL expression
    (13) variable_declaration -> . VAR ID EQUAL expression
    (40) function_declaration -> . FUN ID LPAREN parameter_list RPAREN LBRACE statement_list RBRACE
    (44) if_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE
    (45) if_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (46) while_statement -> . WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
    (47) output_statement -> . PRINT LPAREN expression RPAREN

    VAL             shift and go to state 9
    VAR             shift and go to state 10
    FUN             shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    PRINT           shift and go to state 14

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    variable_declaration           shift and go to state 4
    function_declaration           shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    output_statement               shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (4) statement_list -> statement_list . statement
    (5) statement -> . variable_declaration
    (6) statement -> . function_declaration
    (7) statement -> . if_statement
    (8) statement -> . while_statement
    (9) statement -> . output_statement
    (10) variable_declaration -> . VAL ID COLONS type EQUAL expression
    (11) variable_declaration -> . VAR ID COLONS type EQUAL expression
    (12) variable_declaration -> . VAL ID EQUAL expression
    (13) variable_declaration -> . VAR ID EQUAL expression
    (40) function_declaration -> . FUN ID LPAREN parameter_list RPAREN LBRACE statement_list RBRACE
    (44) if_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE
    (45) if_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (46) while_statement -> . WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
    (47) output_statement -> . PRINT LPAREN expression RPAREN

    $end            reduce using rule 1 (program -> statement_list .)
    VAL             shift and go to state 9
    VAR             shift and go to state 10
    FUN             shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    PRINT           shift and go to state 14

    statement                      shift and go to state 15
    variable_declaration           shift and go to state 4
    function_declaration           shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    output_statement               shift and go to state 8

state 3

    (3) statement_list -> statement .

    VAL             reduce using rule 3 (statement_list -> statement .)
    VAR             reduce using rule 3 (statement_list -> statement .)
    FUN             reduce using rule 3 (statement_list -> statement .)
    IF              reduce using rule 3 (statement_list -> statement .)
    WHILE           reduce using rule 3 (statement_list -> statement .)
    PRINT           reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement .)


state 4

    (5) statement -> variable_declaration .

    VAL             reduce using rule 5 (statement -> variable_declaration .)
    VAR             reduce using rule 5 (statement -> variable_declaration .)
    FUN             reduce using rule 5 (statement -> variable_declaration .)
    IF              reduce using rule 5 (statement -> variable_declaration .)
    WHILE           reduce using rule 5 (statement -> variable_declaration .)
    PRINT           reduce using rule 5 (statement -> variable_declaration .)
    $end            reduce using rule 5 (statement -> variable_declaration .)
    RBRACE          reduce using rule 5 (statement -> variable_declaration .)


state 5

    (6) statement -> function_declaration .

    VAL             reduce using rule 6 (statement -> function_declaration .)
    VAR             reduce using rule 6 (statement -> function_declaration .)
    FUN             reduce using rule 6 (statement -> function_declaration .)
    IF              reduce using rule 6 (statement -> function_declaration .)
    WHILE           reduce using rule 6 (statement -> function_declaration .)
    PRINT           reduce using rule 6 (statement -> function_declaration .)
    $end            reduce using rule 6 (statement -> function_declaration .)
    RBRACE          reduce using rule 6 (statement -> function_declaration .)


state 6

    (7) statement -> if_statement .

    VAL             reduce using rule 7 (statement -> if_statement .)
    VAR             reduce using rule 7 (statement -> if_statement .)
    FUN             reduce using rule 7 (statement -> if_statement .)
    IF              reduce using rule 7 (statement -> if_statement .)
    WHILE           reduce using rule 7 (statement -> if_statement .)
    PRINT           reduce using rule 7 (statement -> if_statement .)
    $end            reduce using rule 7 (statement -> if_statement .)
    RBRACE          reduce using rule 7 (statement -> if_statement .)


state 7

    (8) statement -> while_statement .

    VAL             reduce using rule 8 (statement -> while_statement .)
    VAR             reduce using rule 8 (statement -> while_statement .)
    FUN             reduce using rule 8 (statement -> while_statement .)
    IF              reduce using rule 8 (statement -> while_statement .)
    WHILE           reduce using rule 8 (statement -> while_statement .)
    PRINT           reduce using rule 8 (statement -> while_statement .)
    $end            reduce using rule 8 (statement -> while_statement .)
    RBRACE          reduce using rule 8 (statement -> while_statement .)


state 8

    (9) statement -> output_statement .

    VAL             reduce using rule 9 (statement -> output_statement .)
    VAR             reduce using rule 9 (statement -> output_statement .)
    FUN             reduce using rule 9 (statement -> output_statement .)
    IF              reduce using rule 9 (statement -> output_statement .)
    WHILE           reduce using rule 9 (statement -> output_statement .)
    PRINT           reduce using rule 9 (statement -> output_statement .)
    $end            reduce using rule 9 (statement -> output_statement .)
    RBRACE          reduce using rule 9 (statement -> output_statement .)


state 9

    (10) variable_declaration -> VAL . ID COLONS type EQUAL expression
    (12) variable_declaration -> VAL . ID EQUAL expression

    ID              shift and go to state 16


state 10

    (11) variable_declaration -> VAR . ID COLONS type EQUAL expression
    (13) variable_declaration -> VAR . ID EQUAL expression

    ID              shift and go to state 17


state 11

    (40) function_declaration -> FUN . ID LPAREN parameter_list RPAREN LBRACE statement_list RBRACE

    ID              shift and go to state 18


state 12

    (44) if_statement -> IF . LPAREN expression RPAREN LBRACE statement_list RBRACE
    (45) if_statement -> IF . LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE

    LPAREN          shift and go to state 19


state 13

    (46) while_statement -> WHILE . LPAREN expression RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 20


state 14

    (47) output_statement -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 21


state 15

    (4) statement_list -> statement_list statement .

    VAL             reduce using rule 4 (statement_list -> statement_list statement .)
    VAR             reduce using rule 4 (statement_list -> statement_list statement .)
    FUN             reduce using rule 4 (statement_list -> statement_list statement .)
    IF              reduce using rule 4 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 4 (statement_list -> statement_list statement .)
    PRINT           reduce using rule 4 (statement_list -> statement_list statement .)
    $end            reduce using rule 4 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 4 (statement_list -> statement_list statement .)


state 16

    (10) variable_declaration -> VAL ID . COLONS type EQUAL expression
    (12) variable_declaration -> VAL ID . EQUAL expression

    COLONS          shift and go to state 22
    EQUAL           shift and go to state 23


state 17

    (11) variable_declaration -> VAR ID . COLONS type EQUAL expression
    (13) variable_declaration -> VAR ID . EQUAL expression

    COLONS          shift and go to state 24
    EQUAL           shift and go to state 25


state 18

    (40) function_declaration -> FUN ID . LPAREN parameter_list RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 26


state 19

    (44) if_statement -> IF LPAREN . expression RPAREN LBRACE statement_list RBRACE
    (45) if_statement -> IF LPAREN . expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (2) expression -> . MINUS expression
    (17) expression -> . term
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression LOGICAL_AND expression
    (23) expression -> . expression LOGICAL_OR expression
    (24) expression -> . expression LOGICAL_EQUAL expression
    (25) expression -> . LOGICAL_NOT expression
    (26) expression -> . expression GREATER_THAN expression
    (27) expression -> . expression LESS_THAN expression
    (28) expression -> . expression NOT_EQUAL expression
    (29) expression -> . expression GREATER_THAN_EQUAL expression
    (30) expression -> . expression LESS_THAN_EQUAL expression
    (31) expression -> . LPAREN expression RPAREN
    (32) term -> . Literal
    (33) term -> . ID
    (34) Literal -> . INTEGER_LITERAL
    (35) Literal -> . boolean
    (36) Literal -> . STRING_LITERAL
    (37) boolean -> . TRUE
    (38) boolean -> . FALSE

    MINUS           shift and go to state 29
    LOGICAL_NOT     shift and go to state 31
    LPAREN          shift and go to state 27
    ID              shift and go to state 33
    INTEGER_LITERAL shift and go to state 34
    STRING_LITERAL  shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    expression                     shift and go to state 28
    term                           shift and go to state 30
    Literal                        shift and go to state 32
    boolean                        shift and go to state 35

state 20

    (46) while_statement -> WHILE LPAREN . expression RPAREN LBRACE statement_list RBRACE
    (2) expression -> . MINUS expression
    (17) expression -> . term
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression LOGICAL_AND expression
    (23) expression -> . expression LOGICAL_OR expression
    (24) expression -> . expression LOGICAL_EQUAL expression
    (25) expression -> . LOGICAL_NOT expression
    (26) expression -> . expression GREATER_THAN expression
    (27) expression -> . expression LESS_THAN expression
    (28) expression -> . expression NOT_EQUAL expression
    (29) expression -> . expression GREATER_THAN_EQUAL expression
    (30) expression -> . expression LESS_THAN_EQUAL expression
    (31) expression -> . LPAREN expression RPAREN
    (32) term -> . Literal
    (33) term -> . ID
    (34) Literal -> . INTEGER_LITERAL
    (35) Literal -> . boolean
    (36) Literal -> . STRING_LITERAL
    (37) boolean -> . TRUE
    (38) boolean -> . FALSE

    MINUS           shift and go to state 29
    LOGICAL_NOT     shift and go to state 31
    LPAREN          shift and go to state 27
    ID              shift and go to state 33
    INTEGER_LITERAL shift and go to state 34
    STRING_LITERAL  shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    expression                     shift and go to state 39
    term                           shift and go to state 30
    Literal                        shift and go to state 32
    boolean                        shift and go to state 35

state 21

    (47) output_statement -> PRINT LPAREN . expression RPAREN
    (2) expression -> . MINUS expression
    (17) expression -> . term
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression LOGICAL_AND expression
    (23) expression -> . expression LOGICAL_OR expression
    (24) expression -> . expression LOGICAL_EQUAL expression
    (25) expression -> . LOGICAL_NOT expression
    (26) expression -> . expression GREATER_THAN expression
    (27) expression -> . expression LESS_THAN expression
    (28) expression -> . expression NOT_EQUAL expression
    (29) expression -> . expression GREATER_THAN_EQUAL expression
    (30) expression -> . expression LESS_THAN_EQUAL expression
    (31) expression -> . LPAREN expression RPAREN
    (32) term -> . Literal
    (33) term -> . ID
    (34) Literal -> . INTEGER_LITERAL
    (35) Literal -> . boolean
    (36) Literal -> . STRING_LITERAL
    (37) boolean -> . TRUE
    (38) boolean -> . FALSE

    MINUS           shift and go to state 29
    LOGICAL_NOT     shift and go to state 31
    LPAREN          shift and go to state 27
    ID              shift and go to state 33
    INTEGER_LITERAL shift and go to state 34
    STRING_LITERAL  shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    expression                     shift and go to state 40
    term                           shift and go to state 30
    Literal                        shift and go to state 32
    boolean                        shift and go to state 35

state 22

    (10) variable_declaration -> VAL ID COLONS . type EQUAL expression
    (14) type -> . INT
    (15) type -> . STRING
    (16) type -> . BOOLEAN

    INT             shift and go to state 42
    STRING          shift and go to state 43
    BOOLEAN         shift and go to state 44

    type                           shift and go to state 41

state 23

    (12) variable_declaration -> VAL ID EQUAL . expression
    (2) expression -> . MINUS expression
    (17) expression -> . term
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression LOGICAL_AND expression
    (23) expression -> . expression LOGICAL_OR expression
    (24) expression -> . expression LOGICAL_EQUAL expression
    (25) expression -> . LOGICAL_NOT expression
    (26) expression -> . expression GREATER_THAN expression
    (27) expression -> . expression LESS_THAN expression
    (28) expression -> . expression NOT_EQUAL expression
    (29) expression -> . expression GREATER_THAN_EQUAL expression
    (30) expression -> . expression LESS_THAN_EQUAL expression
    (31) expression -> . LPAREN expression RPAREN
    (32) term -> . Literal
    (33) term -> . ID
    (34) Literal -> . INTEGER_LITERAL
    (35) Literal -> . boolean
    (36) Literal -> . STRING_LITERAL
    (37) boolean -> . TRUE
    (38) boolean -> . FALSE

    MINUS           shift and go to state 29
    LOGICAL_NOT     shift and go to state 31
    LPAREN          shift and go to state 27
    ID              shift and go to state 33
    INTEGER_LITERAL shift and go to state 34
    STRING_LITERAL  shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    expression                     shift and go to state 45
    term                           shift and go to state 30
    Literal                        shift and go to state 32
    boolean                        shift and go to state 35

state 24

    (11) variable_declaration -> VAR ID COLONS . type EQUAL expression
    (14) type -> . INT
    (15) type -> . STRING
    (16) type -> . BOOLEAN

    INT             shift and go to state 42
    STRING          shift and go to state 43
    BOOLEAN         shift and go to state 44

    type                           shift and go to state 46

state 25

    (13) variable_declaration -> VAR ID EQUAL . expression
    (2) expression -> . MINUS expression
    (17) expression -> . term
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression LOGICAL_AND expression
    (23) expression -> . expression LOGICAL_OR expression
    (24) expression -> . expression LOGICAL_EQUAL expression
    (25) expression -> . LOGICAL_NOT expression
    (26) expression -> . expression GREATER_THAN expression
    (27) expression -> . expression LESS_THAN expression
    (28) expression -> . expression NOT_EQUAL expression
    (29) expression -> . expression GREATER_THAN_EQUAL expression
    (30) expression -> . expression LESS_THAN_EQUAL expression
    (31) expression -> . LPAREN expression RPAREN
    (32) term -> . Literal
    (33) term -> . ID
    (34) Literal -> . INTEGER_LITERAL
    (35) Literal -> . boolean
    (36) Literal -> . STRING_LITERAL
    (37) boolean -> . TRUE
    (38) boolean -> . FALSE

    MINUS           shift and go to state 29
    LOGICAL_NOT     shift and go to state 31
    LPAREN          shift and go to state 27
    ID              shift and go to state 33
    INTEGER_LITERAL shift and go to state 34
    STRING_LITERAL  shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    expression                     shift and go to state 47
    term                           shift and go to state 30
    Literal                        shift and go to state 32
    boolean                        shift and go to state 35

state 26

    (40) function_declaration -> FUN ID LPAREN . parameter_list RPAREN LBRACE statement_list RBRACE
    (41) parameter_list -> . parameter
    (42) parameter_list -> . parameter_list COMMA parameter
    (43) parameter -> . ID COLONS type

    ID              shift and go to state 48

    parameter_list                 shift and go to state 49
    parameter                      shift and go to state 50

state 27

    (31) expression -> LPAREN . expression RPAREN
    (2) expression -> . MINUS expression
    (17) expression -> . term
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression LOGICAL_AND expression
    (23) expression -> . expression LOGICAL_OR expression
    (24) expression -> . expression LOGICAL_EQUAL expression
    (25) expression -> . LOGICAL_NOT expression
    (26) expression -> . expression GREATER_THAN expression
    (27) expression -> . expression LESS_THAN expression
    (28) expression -> . expression NOT_EQUAL expression
    (29) expression -> . expression GREATER_THAN_EQUAL expression
    (30) expression -> . expression LESS_THAN_EQUAL expression
    (31) expression -> . LPAREN expression RPAREN
    (32) term -> . Literal
    (33) term -> . ID
    (34) Literal -> . INTEGER_LITERAL
    (35) Literal -> . boolean
    (36) Literal -> . STRING_LITERAL
    (37) boolean -> . TRUE
    (38) boolean -> . FALSE

    MINUS           shift and go to state 29
    LOGICAL_NOT     shift and go to state 31
    LPAREN          shift and go to state 27
    ID              shift and go to state 33
    INTEGER_LITERAL shift and go to state 34
    STRING_LITERAL  shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    expression                     shift and go to state 51
    term                           shift and go to state 30
    Literal                        shift and go to state 32
    boolean                        shift and go to state 35

state 28

    (44) if_statement -> IF LPAREN expression . RPAREN LBRACE statement_list RBRACE
    (45) if_statement -> IF LPAREN expression . RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . TIMES expression
    (21) expression -> expression . DIVIDE expression
    (22) expression -> expression . LOGICAL_AND expression
    (23) expression -> expression . LOGICAL_OR expression
    (24) expression -> expression . LOGICAL_EQUAL expression
    (26) expression -> expression . GREATER_THAN expression
    (27) expression -> expression . LESS_THAN expression
    (28) expression -> expression . NOT_EQUAL expression
    (29) expression -> expression . GREATER_THAN_EQUAL expression
    (30) expression -> expression . LESS_THAN_EQUAL expression

    RPAREN          shift and go to state 52
    PLUS            shift and go to state 53
    MINUS           shift and go to state 54
    TIMES           shift and go to state 55
    DIVIDE          shift and go to state 56
    LOGICAL_AND     shift and go to state 57
    LOGICAL_OR      shift and go to state 58
    LOGICAL_EQUAL   shift and go to state 59
    GREATER_THAN    shift and go to state 60
    LESS_THAN       shift and go to state 61
    NOT_EQUAL       shift and go to state 62
    GREATER_THAN_EQUAL shift and go to state 63
    LESS_THAN_EQUAL shift and go to state 64


state 29

    (2) expression -> MINUS . expression
    (2) expression -> . MINUS expression
    (17) expression -> . term
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression LOGICAL_AND expression
    (23) expression -> . expression LOGICAL_OR expression
    (24) expression -> . expression LOGICAL_EQUAL expression
    (25) expression -> . LOGICAL_NOT expression
    (26) expression -> . expression GREATER_THAN expression
    (27) expression -> . expression LESS_THAN expression
    (28) expression -> . expression NOT_EQUAL expression
    (29) expression -> . expression GREATER_THAN_EQUAL expression
    (30) expression -> . expression LESS_THAN_EQUAL expression
    (31) expression -> . LPAREN expression RPAREN
    (32) term -> . Literal
    (33) term -> . ID
    (34) Literal -> . INTEGER_LITERAL
    (35) Literal -> . boolean
    (36) Literal -> . STRING_LITERAL
    (37) boolean -> . TRUE
    (38) boolean -> . FALSE

    MINUS           shift and go to state 29
    LOGICAL_NOT     shift and go to state 31
    LPAREN          shift and go to state 27
    ID              shift and go to state 33
    INTEGER_LITERAL shift and go to state 34
    STRING_LITERAL  shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    expression                     shift and go to state 65
    term                           shift and go to state 30
    Literal                        shift and go to state 32
    boolean                        shift and go to state 35

state 30

    (17) expression -> term .

    RPAREN          reduce using rule 17 (expression -> term .)
    PLUS            reduce using rule 17 (expression -> term .)
    MINUS           reduce using rule 17 (expression -> term .)
    TIMES           reduce using rule 17 (expression -> term .)
    DIVIDE          reduce using rule 17 (expression -> term .)
    LOGICAL_AND     reduce using rule 17 (expression -> term .)
    LOGICAL_OR      reduce using rule 17 (expression -> term .)
    LOGICAL_EQUAL   reduce using rule 17 (expression -> term .)
    GREATER_THAN    reduce using rule 17 (expression -> term .)
    LESS_THAN       reduce using rule 17 (expression -> term .)
    NOT_EQUAL       reduce using rule 17 (expression -> term .)
    GREATER_THAN_EQUAL reduce using rule 17 (expression -> term .)
    LESS_THAN_EQUAL reduce using rule 17 (expression -> term .)
    VAL             reduce using rule 17 (expression -> term .)
    VAR             reduce using rule 17 (expression -> term .)
    FUN             reduce using rule 17 (expression -> term .)
    IF              reduce using rule 17 (expression -> term .)
    WHILE           reduce using rule 17 (expression -> term .)
    PRINT           reduce using rule 17 (expression -> term .)
    $end            reduce using rule 17 (expression -> term .)
    RBRACE          reduce using rule 17 (expression -> term .)


state 31

    (25) expression -> LOGICAL_NOT . expression
    (2) expression -> . MINUS expression
    (17) expression -> . term
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression TIMES expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression LOGICAL_AND expression
    (23) expression -> . expression LOGICAL_OR expression
    (24) expression -> . expression LOGICAL_EQUAL expression
    (25) expression -> . LOGICAL_NOT expression
    (26) expression -> . expression GREATER_THAN expression
    (27) expression -> . expression LESS_THAN expression
    (28) expression -> . expression NOT_EQUAL expression
    (29) expression -> . expression GREATER_THAN_EQUAL expression
    (30) expression -> . expression LESS_THAN_EQUAL expression
    (31) expression -> . LPAREN expression RPAREN
    (32) term -> . Literal
    (33) term -> . ID
    (34) Literal -> . INTEGER_LITERAL
    (35) Literal -> . boolean
    (36) Literal -> . STRING_LITERAL
    (37) boolean -> . TRUE
    (38) boolean -> . FALSE

    MINUS           shift and go to state 29
    LOGICAL_NOT     shift and go to state 31
    LPAREN          shift and go to state 27
    ID              shift and go to state 33
    INTEGER_LITERAL shift and go to state 34
    STRING_LITERAL  shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    expression                     shift and go to state 66
    term                           shift and go to state 30
    Literal                        shift and go to state 32
    boolean                        shift and go to state 35

state 32

    (32) term -> Literal .

    RPAREN          reduce using rule 32 (term -> Literal .)
    PLUS            reduce using rule 32 (term -> Literal .)
    MINUS           reduce using rule 32 (term -> Literal .)
    TIMES           reduce using rule 32 (term -> Literal .)
    DIVIDE          reduce using rule 32 (term -> Literal .)
    LOGICAL_AND     reduce using rule 32 (term -> Literal .)
    LOGICAL_OR      reduce using rule 32 (term -> Literal .)
    LOGICAL_EQUAL   reduce using rule 32 (term -> Literal .)
    GREATER_THAN    reduce using rule 32 (term -> Literal .)
    LESS_THAN       reduce using rule 32 (term -> Literal .)
    NOT_EQUAL       reduce using rule 32 (term -> Literal .)
    GREATER_THAN_EQUAL reduce using rule 32 (term -> Literal .)
    LESS_THAN_EQUAL reduce using rule 32 (term -> Literal .)
    VAL             reduce using rule 32 (term -> Literal .)
    VAR             reduce using rule 32 (term -> Literal .)
    FUN             reduce using rule 32 (term -> Literal .)
    IF              reduce using rule 32 (term -> Literal .)
    WHILE           reduce using rule 32 (term -> Literal .)
    PRINT           reduce using rule 32 (term -> Literal .)
    $end            reduce using rule 32 (term -> Literal .)
    RBRACE          reduce using rule 32 (term -> Literal .)


state 33

    (33) term -> ID .

    RPAREN          reduce using rule 33 (term -> ID .)
    PLUS            reduce using rule 33 (term -> ID .)
    MINUS           reduce using rule 33 (term -> ID .)
    TIMES           reduce using rule 33 (term -> ID .)
    DIVIDE          reduce using rule 33 (term -> ID .)
    LOGICAL_AND     reduce using rule 33 (term -> ID .)
    LOGICAL_OR      reduce using rule 33 (term -> ID .)
    LOGICAL_EQUAL   reduce using rule 33 (term -> ID .)
    GREATER_THAN    reduce using rule 33 (term -> ID .)
    LESS_THAN       reduce using rule 33 (term -> ID .)
    NOT_EQUAL       reduce using rule 33 (term -> ID .)
    GREATER_THAN_EQUAL reduce using rule 33 (term -> ID .)
    LESS_THAN_EQUAL reduce using rule 33 (term -> ID .)
    VAL             reduce using rule 33 (term -> ID .)
    VAR             reduce using rule 33 (term -> ID .)
    FUN             reduce using rule 33 (term -> ID .)
    IF              reduce using rule 33 (term -> ID .)
    WHILE           reduce using rule 33 (term -> ID .)
    PRINT           reduce using rule 33 (term -> ID .)
    $end            reduce using rule 33 (term -> ID .)
    RBRACE          reduce using rule 33 (term -> ID .)


state 34

    (34) Literal -> INTEGER_LITERAL .
